@@ -2,6 +2,7 @@ package WELLET.welletServer.category.service;
 
 import WELLET.welletServer.category.dto.CategoryCardListResponse;
 import WELLET.welletServer.category.domain.Category;
+import WELLET.welletServer.category.dto.CategoryCountResponse;
 import WELLET.welletServer.categoryCard.domain.CategoryCard;
 import WELLET.welletServer.category.dto.CategorySaveDto;
 import WELLET.welletServer.category.dto.CategoryUpdateDto;
@@ -9,13 +10,13 @@ import WELLET.welletServer.category.exception.CategoryErrorCode;
 import WELLET.welletServer.category.exception.CategoryException;
 import WELLET.welletServer.category.reponsitory.CategoryRepository;
 import WELLET.welletServer.categoryCard.repository.CategoryCardRepository;
+import WELLET.welletServer.member.domain.Member;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -27,13 +28,13 @@ public class CategoryService {
     private final CategoryCardRepository categoryCardRepository;
 
     @Transactional
-    public long saveCategory (CategorySaveDto dto) {
-
-        categoryRepository.findByName(dto.getName()).ifPresent(e -> {
+    public long saveCategory (Member member, CategorySaveDto dto) {
+        categoryRepository.findByMemberAndName(member, dto.getName()).ifPresent(e -> {
             throw new CategoryException(CategoryErrorCode.CATEGORY_DUPLICATE);
         });
 
         Category category = Category.builder()
+                .member(member)
                 .name(dto.getName())
                 .build();
         return categoryRepository.save(category).getId();
@@ -51,35 +52,27 @@ public class CategoryService {
         categoryRepository.delete(category);
     }
 
-    public List<CategoryCardListResponse> findAllCards() {
-        List<CategoryCard> categoryCards = categoryRepository.findAllCards();
-        return categoryCards.stream()
-                .map(CategoryCardListResponse::toCategoryList)
-                .collect(Collectors.toList());
-    }
-
-    public List<CategoryCardListResponse> findCardsByCategoryId(Long categoryId) {
-
-        Category category = Optional.ofNullable(categoryId)
-                .filter(id -> id != null && id > 0)
-                .flatMap(categoryRepository::findById)
+    public CategoryCountResponse findCardsByIds(Long memberId, Long categoryId) {
+        categoryRepository.findById(categoryId)
                 .orElseThrow(() -> new CategoryException(CategoryErrorCode.CATEGORY_NOT_FOUND));
 
-        return categoryRepository.findCardsByCategoryId(category.getId()).stream()
+        List<CategoryCardListResponse> responses = categoryRepository.findCardsByIds(memberId, categoryId).stream()
                 .map(CategoryCardListResponse::toCategoryList)
-                .collect(Collectors.toList());
+                .toList();
+
+        return new CategoryCountResponse(responses.size(), responses);
     }
 
-    public List<String> findAllName() {
-        List<Category> categories = categoryRepository.findAll();
+    public List<String> findAllName(Member member) {
+        List<Category> categories = categoryRepository.findByMember(member);
         return categories.stream()
                 .map(Category::getName)
                 .collect(Collectors.toList());
     }
 
-    public List<Category> findCategoryNames(List<String> categoryNames) {
+    public List<Category> findCategoryNames(Member member, List<String> categoryNames) {
         return categoryNames.stream()
-                .map(name -> categoryRepository.findByName(name)
+                .map(name -> categoryRepository.findByMemberAndName(member, name)
                         .orElseThrow(() -> new CategoryException(CategoryErrorCode.CATEGORY_NOT_FOUND)))
                 .collect(Collectors.toList());
     }
